@@ -20,9 +20,9 @@ public class ClassLoaderMain {
 		public Class<?> loadClass(String name) throws ClassNotFoundException {
 			try {
 				if (name.startsWith("java.")) return super.loadClass(name);
-				ClassReader r = new ClassReader(name);
+				byte[] buf = ClassLoader.getSystemResourceAsStream(name + ".class").readAllBytes();
 				System.out.println(name);
-				Class<?> c = defineClass(name, r.b, 0, r.b.length);
+				Class<?> c = defineClass(name, buf, 0, buf.length);
 				return c;
 			} catch (IOException e) {
 				return null;
@@ -59,7 +59,7 @@ public class ClassLoaderMain {
 		CustomizedCLassLoader cl = new CustomizedCLassLoader();
 		try {
 			Class<?> c = cl.loadClass("selogger.testdata.ClassLoaderMain$A");
-			Object o = c.newInstance();
+			Object o = c.getDeclaredConstructor().newInstance();
 			System.out.println(o.toString());
 		} catch (Throwable e) {
 			e.printStackTrace();
